--- a/github-maven-example/example/pom.xml
+++ b/github-maven-example/example/pom.xml
@@ -169,12 +169,12 @@
 <repository>
 <id>deployment</id>
 <name>Release</name>
-<url>http://52.66.141.97:8081/#admin/repository/repositories:Repository-Release</url>
+<url>http://http://13.126.31.251:8081/repository/Jenkins_release/</url>
 </repository>
 <snapshotRepository>
 <id>deployment</id>
 <name>Snapshot</name>
-<url>http://52.66.141.97:8081/#admin/repository/repositories:Repository-snapshot</url>
+<url>http://http://13.126.31.251:8081/repository/Jenkins_snapshot/</url>
 </snapshotRepository>
 </distributionManagement>
 </project>
